Forms: Remove delegation of focus on legend

legend.focus() should not delegate focus.

Bug: https://github.com/whatwg/html/issues/3950
Bug: 880026
Change-Id: I35e046e45bbc45628f148383eaa77f12245e9e98
Reviewed-on: https://chromium-review.googlesource.com/c/1304180
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Amos Lim <eui-sang.lim@samsung.com>
Cr-Commit-Position: refs/heads/master@{#603783}
Former-commit-id: 2010bba41812ac1f3ea92a286c3894a14535766e